--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
@@ -81,8 +83,8 @@
 
 html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
+  /* max-width: 100vw; */
+  /* overflow-x: hidden; */
 }
 
 body {
@@ -98,6 +100,54 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+.main-div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: auto;
+}
+
+.main-buttons-div {
+  /* display: flex;
+  flex-wrap: wrap; */
+  text-align: center;
+  align-items: center;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 0px;
+}
+
+.main-h1 {
+  font-family: 'Bebas Neue', cursive;
+  color: #ffb1b1;
+  font-size: 96px;
+  font-weight: bold;
+  text-align: center;
+}
+
+.main-buttons {
+  font-family: 'Bebas Neue', cursive;
+  padding: 5rem;
+  font-size: 96px;
+  margin: 2rem;
+  border: solid 5px #000;
+  border-radius: 15px;
+  font-weight: bold;
+  color: #fff;
+  background-color: #ffa1a1;
+  width: 50rem;
+  height: auto;
+  cursor: pointer;
+  flex-basis: calc(50% - 20px);
+  box-sizing: border-box;
+}
+
+.main-footer {
+  font-family: 'Bebas Neue', cursive;
+  color: #000;
+  font-size: xx-large;
 }
 
 @media (prefers-color-scheme: dark) {
