--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -83,8 +83,8 @@
 
 html,
 body {
-  /* max-width: 100vw; */
-  /* overflow-x: hidden; */
+  /* max-width: 100vw;
+  overflow-x: hidden; */
 }
 
 body {
@@ -95,6 +95,9 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+  background-color: #b6eaff;
+  padding: 0;
+  margin: 0;
 }
 
 a {
@@ -106,7 +109,18 @@ a {
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: auto;
+  justify-content: center;
+  height: 100vh;
+  /* padding-bottom: 10rem; */
+}
+
+.main-trad-div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 
 .main-buttons-div {
@@ -148,6 +162,137 @@ a {
   font-family: 'Bebas Neue', cursive;
   color: #000;
   font-size: xx-large;
+  font-weight: bold;
+  text-decoration: underline;
+  padding-top: 5rem;
+}
+
+.category-details {
+  font-family: 'Bebas Neue', cursive;
+  font-size: xx-large;
+  /* justify-content: left;
+  padding: 1rem; */
+}
+
+.category-input-green {
+  font-family: 'Bebas Neue', cursive;
+  font-size: xx-large;
+  text-align: center;
+  border-radius: 25px;
+  background-color: #00000000;
+  border: none 0px #000;
+  color: #40c071;
+  padding-left: 1rem;
+}
+
+.category-input-red {
+  font-family: 'Bebas Neue', cursive;
+  font-size: xx-large;
+  text-align: center;
+  border-radius: 25px;
+  background-color: #00000000;
+  border: none 0px #000;
+  color: #c04040;
+  padding-left: 1rem;
+}
+
+.category-div {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  /* justify-content: space-between; */
+  justify-content: space-around;
+  justify-content: flex-start;
+  /* justify-items: flex-start; */
+}
+
+.sticky-footer {
+  display: flex;
+  flex-direction: row;
+  position: fixed;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  bottom: 0;
+  width: 110%;
+  height: 50px; /* adjust this value to fit your footer content */
+  padding: 3rem;
+  border: solid 3px #000;
+  /* border-radius: 25px; */
+  /* margin: 2rem; */
+  background-color: #fad0ff;
+}
+
+.footer-link {
+  padding: 2rem;
+  font-size: x-large;
+  font-family: 'Bebas Neue', cursive;
+  text-decoration: underline;
+  align-items: center;
+}
+
+.land {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  /* align-content: center;
+  align-self: center;
+  align-items: center; */
+  margin: auto;
+  /* margin-top: 2rem; */
+  /* margin-bottom: 2rem; */
+  /* padding-bottom: 2rem;
+  padding-top: 2rem; */
+  background-image: url("../images/greenscreen.png");
+
+}
+
+.home-text {
+  text-align: center;
+  font-size: 72px;
+  color: #fff;
+  font-family: 'Bebas Neue', cursive;
+  line-height: 90%;
+}
+
+.home-buttons-div {
+  display: flex;
+  flex-direction: column;
+  margin: 0rem;
+}
+
+.home-buttons {
+  padding: 2rem;
+  margin: 0.25rem;
+  border: solid 0px #000;
+  border-radius: 1px;
+  background-color: #40c071;
+  font-weight: bold;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.album-art {
+  display: flex;
+  flex-direction: column;
+  width: 100vw;
+  align-items: center;
+  /* position: relative; */
+  /* margin: auto; */
+  margin: 0rem;
+}
+
+.album-image {
+  object-fit: contain;
+  margin: 0.5rem;
+  box-shadow: 1px 5px 10px #000000;
 }
 
 @media (prefers-color-scheme: dark) {
