--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -306,6 +306,10 @@ a {
   box-shadow: 1px 5px 10px #000000;
 }
 
+.art {
+  transform: scale(1);
+}
+
 .lp-main-div {
   display: flex;
   flex-direction: column;
@@ -427,6 +431,9 @@ a {
   flex-direction: column;
   align-items: center;
   width: 100vw;
+}
+
+.art {
   transform: scale(0.5);
 }
 
