--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -433,12 +433,19 @@ a {
   flex-direction: column;
   align-items: center;
   width: 100vw;
+
+}
+
+.lp-main-div {
+  height: 100vh;
+  /* height: auto; */
 }
 
 .art {
-  transform: scale(0.5);
-  width: 500px;
-  height: 500px;
+  /* transform: scale(0.5); */
+  width: 400px;
+  height: 400px;
+  width: auto;
 
 }
 
