--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap');
 
 :root {
   --max-width: 1100px;
@@ -338,9 +339,11 @@ a {
   height: 2rem;
   margin: 0.5rem;
   cursor: pointer;
-  font-family: 'Fredoka One';
+  /* font-family: 'Fredoka One'; */
   border-radius: 0px;
   border: solid 0.2px #000;
+  font-family: 'Silkscreen', cursive;
+  font-weight: bold;
 }
 
 .row {
@@ -453,6 +456,7 @@ a {
   display: flex;
   flex-direction: column;
   margin: 0.5rem;
+  
 }
 
 }
