--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -109,8 +109,10 @@ a {
 
 .desktop-background {
   height: 100vh;
+  width: 100vw;
   background-color: #363636;
   z-index: -1;
+  font-family: 'Bebas Neue', cursive;
 }
 
 .desktop-nav {
@@ -124,6 +126,7 @@ a {
   margin: auto;
   padding: auto;
   text-align: center;
+  font-family: 'Bebas Neue', cursive;
 }
 
 .desktop-nav-div {
@@ -586,12 +589,19 @@ a {
     font-size: xx-large;
     padding-bottom: 0rem;
     padding-top: 0rem;
+    width: 80vw;
   }
 
   .desktop-hero-p {
     font-size: large;
     padding-bottom: 0rem;
     padding-top: 0rem;
+    width: 80vw;
+  }
+
+  .desktop-hero-button {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
   }
 
   .figma-hero-div {
