--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -107,17 +107,29 @@ a {
   text-decoration: none;
 }
 
+.desktop-background-bg {
+  background-image: url("../images/glyfz-transparent-gradientc.png");
+  background-size: cover;
+  background-position: center; /* Center the image */
+  background-repeat: no-repeat;
+  height: 100%;
+  z-index: -1;
+  background-color: #000000;
+}
+
 .desktop-background {
-  height: 100vh;
+  /* height: 100vh; */
   width: 100vw;
-  background-color: #363636;
+  /* background-color: #363636; */
   z-index: -1;
   font-family: 'Bebas Neue', cursive;
+  background: #00000000;
+  text-shadow: 0px 0px 25px black;
 }
 
 .desktop-nav {
   height: 7vh;
-  background: #363636;
+  background: #00000000;
   display: flex;
   flex-direction: row;
   color: #fff;
@@ -140,7 +152,7 @@ a {
   padding: auto;
   text-align: center;
   width: 50vw;
-  background: #363636;
+  background: #00000000;
 }
 
 .desktop-logo {
@@ -178,6 +190,14 @@ a {
 .desktop-hero-h1 {
   margin: 2rem;
   font-size: 96px;
+  color: #ffe08b;
+  /* text-shadow: none;
+  background: radial-gradient(#ff86b4,
+                    #ffa366, #5aa2ff, #fff068);
+            -webkit-text-fill-color: transparent;
+            -webkit-background-clip: text; */
+            /* filter: drop-shadow(0px 0px 10px #ffffff); */
+
 }
 
 .desktop-hero-p {
@@ -191,6 +211,22 @@ a {
   padding-right: 2.5rem;
   padding-top: 1rem;
   padding-bottom: 1rem;
+  transition: 0.2s ease-in-out;
+  font-family: 'Bebas Neue', cursive;
+  font-size: x-large;
+  border: solid 2px #000;
+  width: 10rem;
+  cursor: pointer;
+}
+
+.desktop-hero-button:hover {
+  margin: 2rem;
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  box-shadow: 0px 0px 25px #000;
+  /* transition: 0.2s ease-in-out; */
 }
 
 .desktop-hero-image {
@@ -207,9 +243,16 @@ a {
 }
 
 .album-image-b {
-  height: 50vw;
-  width: 50vw;
+  height: auto;
+  width: 40vw;
   
+}
+
+.new-section {
+  background: #00000000;
+  height: 20vh;
+  color: #fff;
+
 }
 
 .main-div {
@@ -602,6 +645,8 @@ a {
   .desktop-hero-button {
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
+    /* padding-left: 5rem;
+    padding-right: 5rem; */
   }
 
   .figma-hero-div {
