--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -97,7 +97,7 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
-  background-color: #b6eaff;
+  background-color: #000000;
   padding: 0;
   margin: 0;
 }
@@ -107,21 +107,44 @@ a {
   text-decoration: none;
 }
 
-.desktop-background-bg {
+.bg-div {
+  /* height: 100vh; */
+  height: 1vh;
+  background: #00000000;
+  display: flex;
+  flex-direction: row;
+  color: #fff;
+  align-items: center;
+  align-content: space-around;
+  margin: auto;
+  padding: auto;
+  text-align: center;
+  font-family: 'Bebas Neue', cursive;
+  z-index: -1;
+}
+
+.bg-image {
+  /* height: 100vh; */
+  /* object-fit: cover; */
+  object-position: center;
+  z-index: -99;
+}
+
+/* .desktop-background-bg {
   background-image: url("../images/glyfz-transparent-gradientc.png");
   background-size: cover;
-  background-position: center; /* Center the image */
+  background-position: center;
   background-repeat: no-repeat;
   height: 100%;
   z-index: -1;
   background-color: #000000;
-}
+} */
 
 .desktop-background {
   /* height: 100vh; */
   width: 100vw;
   /* background-color: #363636; */
-  z-index: -1;
+  z-index: 1;
   font-family: 'Bebas Neue', cursive;
   background: #00000000;
   text-shadow: 0px 0px 25px black;
@@ -139,6 +162,7 @@ a {
   padding: auto;
   text-align: center;
   font-family: 'Bebas Neue', cursive;
+  z-index: 100;
 }
 
 .desktop-nav-div {
@@ -153,18 +177,21 @@ a {
   text-align: center;
   width: 50vw;
   background: #00000000;
+  z-index: 100;
 }
 
 .desktop-logo {
   margin: auto;
   padding: auto;
   z-index: 100;
+  /* z-index: 1; */
 }
 
 .desktop-nav-links {
   margin: auto;
   padding: auto;
   z-index: 100;
+  /* z-index: 1; */
 }
 
 .desktop-hero-layout {
