--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -85,8 +85,8 @@
 
 html,
 body {
-  /* max-width: 100vw;
-  overflow-x: hidden; */
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 
 body {
@@ -124,8 +124,8 @@ a {
 }
 
 .bg-image {
-  /* height: 100vh; */
-  /* object-fit: cover; */
+  height: 100vh;
+  object-fit: cover;
   object-position: center;
   z-index: -99;
 }
@@ -141,7 +141,7 @@ a {
 } */
 
 .desktop-background {
-  /* height: 100vh; */
+  height: 100vh;
   width: 100vw;
   /* background-color: #363636; */
   z-index: 1;
