--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 /* :root {
   --max-width: 1100px;
@@ -90,6 +91,9 @@ body {
 }
 
 body {
+  --foreground-rgb: 255, 255, 255;
+  --background-start-rgb: 0, 0, 0;
+  --background-end-rgb: 0, 0, 0;
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
@@ -97,7 +101,7 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
-  background-color: #000000;
+  background-color: #ffd1d1;
   padding: 0;
   margin: 0;
 }
@@ -105,6 +109,390 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+
+
+/* ~~~~~~~~~~~~~~~~~~~~ LP2 css ~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+
+.hero-lp2 {
+  display: flex;
+  flex-direction: row;
+  background: #0e0e0e;
+  background: linear-gradient(#0e0e0e, #252525);
+  height: 100vh;
+  width: 100vw;
+  align-items: center;
+  text-align: center;
+}
+
+.hero-image-2 {
+  width: 50vw;
+  text-align: center;
+  align-items: center;
+}
+
+.hero-text2 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  width: 50vw;
+}
+
+.lp-h3-2 {
+  font-family: 'Poppins';
+  font-weight: 200;
+  margin: 1rem;
+}
+
+.lp-h1-2 {
+  font-family: 'Poppins';
+  font-weight: 700;
+  font-size: 5em;
+  margin: 1rem;
+}
+
+.lp-button-div-2 {
+  display: flex;
+  flex-direction: row;
+}
+
+.lp-button-2 {
+  text-align: center;
+  font-family: 'Poppins';
+  font-weight: bold;
+  font-size: x-large;
+  background: #ff32dd;
+  background: linear-gradient(#ff32dd, #a0248b);
+  width: 10rem;
+  height: 4rem;
+  border-radius: 10px;
+  border: 0px solid #000;
+  margin: 1rem;
+  color: #fff;
+  cursor: pointer;
+  filter: drop-shadow(0px 0px 10px #ff3fbf);
+  transition: 0.2s;
+}
+
+.lp-button-2:hover {
+  filter: drop-shadow(0px 0px 15px #ff3fbf);
+}
+
+.lp-button2-2 {
+  text-align: center;
+  font-family: 'Poppins';
+  font-weight: bold;
+  font-size: x-large;
+  background: #36f8ff;
+  background: linear-gradient(#ff32dd, #a0248b);
+  width: 10rem;
+  height: 4rem;
+  border-radius: 10px;
+  border: 0px solid #000;
+  margin: 1rem;
+  color: #fff;
+  cursor: pointer;
+  filter: drop-shadow(0px 0px 10px #ff3fbf);
+  transition: 0.2s;
+}
+
+.lp-button2-2:hover {
+  filter: drop-shadow(0px 0px 15px #ff3fbf);
+}
+
+.P-2 {
+  height: 700px;
+  width: 700px;
+  filter: drop-shadow(0px 0px 100px #ff4bd8);
+
+}
+
+.icons {
+  filter: drop-shadow(0px 0px 10px #ff4bd8);
+  padding: 1rem;
+  cursor: pointer;
+}
+
+.social-icons {
+  display: flex;
+  flex-direction: row;
+  padding: 1rem;
+}
+
+/* ~~~~~~~~~~~~~~~~~~~~ LP2 css ~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+
+@media (max-width: 820px) {
+
+  .hero-lp2 {
+    display: flex;
+    flex-direction: column;
+    background: #0e0e0e;
+    background: linear-gradient(#0e0e0e, #252525);
+    height: 100vh;
+    width: 100vw;
+    align-items: center;
+    text-align: center;
+  }
+
+  .hero-image-2 {
+    width: 100vw;
+    text-align: center;
+    align-items: center;
+  }
+
+  .P-2 {
+    height: 300px;
+    width: 300px;
+    filter: drop-shadow(0px 0px 25px #ff4bd8);
+  }
+
+  .hero-text2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    width: 100vw;
+  }
+
+  .lp-h3-2 {
+    font-family: 'Poppins';
+    font-weight: 200;
+    margin: 0.25rem;
+  }
+
+  .lp-h1-2 {
+    font-family: 'Poppins';
+    font-weight: 700;
+    font-size: 2em;
+    margin: 1rem;
+  }
+
+  .lp-button-div-2 {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .lp-button-2 {
+    margin: 0.5rem;
+    width: 90vw;
+  }
+
+  .lp-button2-2 {
+    margin: 0.5rem;
+    width: 90vw;
+  }
+}
+
+
+.P {
+  height: 700px;
+  width: 700px;
+  filter: drop-shadow(0px 0px 25px #fff);
+}
+
+.P2 {
+  height: 600px;
+  width: 600px;
+  filter: drop-shadow(0px 0px 25px #fff);
+}
+
+.lp-features {
+  display: flex;
+  flex-direction: column;
+  width: 100vw;
+  background-color: #885cff;
+}
+
+.h1-features {
+  font-family: 'Fredoka One';
+  font-size: 96px;
+  text-align: center;
+  padding: 7rem;
+}
+
+.subhero {
+  width: 100vw;
+  background-color: #c04040;
+
+}
+
+.subhero-h1 {
+  padding: 2rem;
+  padding-top: 15rem;
+  text-align: center;
+  font-size: 56px;
+  font-family: 'Fredoka One', cursive;
+  font-weight: 100;
+}
+
+.subhero-h3 {
+  padding: 2rem;
+  padding-bottom: 15rem;
+  text-align: center;
+  font-size: x-large;
+  font-family: 'Fredoka One', cursive;
+  font-weight: 100;
+}
+
+.hero-center-lp {
+  display: flex;
+  flex-direction: column;
+  height: max-content;
+  width: 100vw;
+  width: auto;
+  background: #84ffcc;
+  align-items: center;
+  text-align: center;
+  margin: auto;
+  padding: 1rem;
+}
+
+.hero-center-bg {
+  height: 100vh;
+  height: fit-content;
+  align-items: center;
+  background: #84ffcc;
+  margin: auto;
+}
+
+.hero-lp {
+  display: flex;
+  flex-direction: row;
+  background: #6ab3f8;
+  height: 100vh;
+  width: 100vw;
+  align-items: center;
+  text-align: center;
+}
+
+.lp-h3 {
+  font-family: 'Fredoka One', cursive;
+  font-weight: 100;
+  margin: 1rem;
+}
+
+.lp-h1 {
+  font-family: 'Fredoka One', cursive;
+  font-weight: 100;
+  font-size: 5em;
+  margin: 1rem;
+}
+
+.lp-button-div {
+  display: flex;
+  flex-direction: row;
+}
+
+.lp-button {
+  text-align: center;
+  font-family: 'Fredoka One', cursive;
+  font-weight: 100;
+  font-size: x-large;
+  background: #8affb7;
+  width: 10rem;
+  height: 4rem;
+  border-radius: 10px;
+  border: 0px solid #000;
+  margin: 1rem;
+}
+
+.lp-button2 {
+  text-align: center;
+  font-family: 'Fredoka One', cursive;
+  font-weight: 100;
+  font-size: x-large;
+  background: #6dfaff;
+  width: 10rem;
+  height: 4rem;
+  border-radius: 10px;
+  border: 0px solid #000;
+  margin: 1rem;
+}
+
+.feature-cards {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  background: #ffa1a1;
+}
+
+.feature-card {
+  display: flex;
+  flex-direction: row;
+  width: 90vw;
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+
+  background-color: #6ab3f8;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 25px;
+  padding: 3rem;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+
+}
+
+.feature-cardb {
+  display: flex;
+  flex-direction: row;
+  width: 90vw;
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+
+  background-color: #6ab3f8;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 25px;
+  padding: 3rem;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
+.feature-icon {
+  height: 400px;
+  width: 400px;
+  filter: drop-shadow(0px 0px 25px #fff);
+}
+
+.feature-image {
+  width: 50vw;
+  text-align: center;
+  align-items: center;
+}
+
+.feature-text {
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  width: 50vw;
+  text-align: center;
+  align-items: center;
+}
+
+.hero-image {
+  width: 50vw;
+  text-align: center;
+  align-items: center;
+}
+
+.hero-image2 {
+  text-align: center;
+  align-items: center;
+}
+
+.hero-text {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  width: 50vw;
+}
+
+.hero-lp-center {
+  display: flex;
+  flex-direction: column;
 }
 
 .bg-div {
@@ -127,7 +515,7 @@ a {
   height: 100vh;
   object-fit: cover;
   object-position: center;
-  z-index: -99;
+  z-index: 0;
 }
 
 /* .desktop-background-bg {
@@ -140,13 +528,17 @@ a {
   background-color: #000000;
 } */
 
+.desktop-background-bg {
+  background: #000000;
+}
+
 .desktop-background {
   height: 100vh;
   width: 100vw;
   /* background-color: #363636; */
   z-index: 1;
   font-family: 'Bebas Neue', cursive;
-  background: #00000000;
+  
   text-shadow: 0px 0px 25px black;
 }
 
