--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -119,7 +119,7 @@ a {
   display: flex;
   flex-direction: row;
   background: #0e0e0e;
-  background: linear-gradient(#0e0e0e, #252525);
+  /* background: linear-gradient(#0e0e0e, #252525); */
   height: 100vh;
   width: 100vw;
   align-items: center;
@@ -162,40 +162,70 @@ a {
   text-align: center;
   font-family: 'Poppins';
   font-weight: bold;
-  font-size: x-large;
-  background: #ff32dd;
-  background: linear-gradient(#ff32dd, #a0248b);
+  font-size: large;
+  background: #ffffff;
+  /* background: linear-gradient(#ff32dd, #a0248b); */
   width: 10rem;
-  height: 4rem;
+  height: 3rem;
   border-radius: 10px;
   border: 0px solid #000;
   margin: 1rem;
-  color: #fff;
+  color: #000;
   cursor: pointer;
-  filter: drop-shadow(0px 0px 10px #ff3fbf);
-  transition: 0.2s;
+  /* filter: drop-shadow(0px 0px 10px #ff3fbf); */
+  transition: 0.2s ease-in-out;
+  animation: shine 10s infinite alternate;
+}
+
+@keyframes shine {
+  0% {
+    box-shadow: 0px 0px 50px #6cff6c;
+  }
+  25% {
+    box-shadow: 0px 0px 50px #ff6eff;
+  }
+  50% {
+    box-shadow: 0px 0px 50px #f4ff58;
+  }
+  75% {
+    box-shadow: 0px 0px 50px #56bed8;
+  }
+  100% {
+    box-shadow: 0px 0px 50px #6cff6c;
+  }
+
 }
 
 .lp-button-2:hover {
-  filter: drop-shadow(0px 0px 15px #ff3fbf);
+  filter: drop-shadow(0px 0px 5px #ff3fbf);
+  background: #0e0e0e;
+  color: #ffffff;
+  border: 1px solid #ffffff;
 }
 
 .lp-button2-2 {
   text-align: center;
   font-family: 'Poppins';
-  font-weight: bold;
-  font-size: x-large;
-  background: #36f8ff;
-  background: linear-gradient(#ff32dd, #a0248b);
+  font-weight: 500;
+  font-size: large;
+  /* background: #36f8ff;
+  background: linear-gradient(#ff32dd, #a0248b); */
   width: 10rem;
-  height: 4rem;
+  height: 3rem;
   border-radius: 10px;
-  border: 0px solid #000;
+  /* border: 0px solid #000; */
   margin: 1rem;
   color: #fff;
   cursor: pointer;
   filter: drop-shadow(0px 0px 10px #ff3fbf);
-  transition: 0.2s;
+  transition: 0.2s ease-in-out;
+
+  box-shadow: 0 0 6px 0 rgba(157, 96, 212, 0.5);
+  border: solid 1px transparent;
+  background-image: linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 0)), linear-gradient(101deg, #ff69f3, #48ffc8);
+  background-origin: border-box;
+  background-clip: content-box, border-box;
+  box-shadow: 2px 1000px 1px #0e0e0e inset;
 }
 
 .lp-button2-2:hover {
@@ -206,7 +236,25 @@ a {
   height: 700px;
   width: 700px;
   filter: drop-shadow(0px 0px 100px #ff4bd8);
+  animation: blah 10s infinite;
+}
 
+@keyframes blah {
+  0% {
+    filter: drop-shadow(0px 0px 100px #6cff6c);
+  }
+  25% {
+    filter: drop-shadow(0px 0px 50px #ff6eff);
+  }
+  50% {
+    filter: drop-shadow(0px 0px 100px #f4ff58);
+  }
+  75% {
+    filter: drop-shadow(0px 0px 50px #56bed8);
+  }
+  100% {
+    filter: drop-shadow(0px 0px 100px #6cff6c);
+  }
 }
 
 .icons {
@@ -229,7 +277,7 @@ a {
     display: flex;
     flex-direction: column;
     background: #0e0e0e;
-    background: linear-gradient(#0e0e0e, #252525);
+    /* background: linear-gradient(#0e0e0e, #252525); */
     height: 100vh;
     width: 100vw;
     align-items: center;
@@ -267,6 +315,7 @@ a {
     font-weight: 700;
     font-size: 2em;
     margin: 1rem;
+    margin-bottom: 2rem;
   }
 
   .lp-button-div-2 {
