--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,6 +3,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+@font-face {
+  font-family: '8-bit';
+  src: url('../fonts/8-bit-pusab-webfont.woff');
+  src: url('../fonts/8-bit-pusab-webfont.woff2');
+  /* font-weight: 400; */
+  font-style: normal;
+  }
+
 /* :root {
   --max-width: 1100px;
   --border-radius: 12px;
@@ -111,6 +119,54 @@ a {
   text-decoration: none;
 }
 
+
+/* ~~~~~~~~~~~~~~~~~ lp3 nav ~~~~~~~~~~~~~~~ */
+
+.lp3navbar {
+  display: none;
+  background: #0e0e0e;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  height: 80px;
+  align-items: center;
+}
+
+.lp3logo {
+  font-family: 'Poppins';
+  margin-right: 1rem;
+  margin-left: 1rem;
+  /* font-size: large; */
+  
+}
+
+.lp3menu {
+  height: 50px;
+  width: 50px;
+  margin-left: 1rem;
+  
+}
+
+.lp3btn {
+  /* display: none; */
+  right: 0;
+  font-family: 'Poppins';
+  font-weight: 500;
+  background: #0e0e0e;
+  color: #fff;
+  border-radius: 25px;
+  border: solid 1px #fff;
+  padding: 1rem;
+  margin-right: 1rem;
+}
+
+
+@media (max-width: 790px) {
+  .lp-btn {
+
+  }
+}
+
 /* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~Nav~~~~~~~~~~~~~~~~~~~~~~~ CSS */
 
 .navbar {
@@ -127,10 +183,14 @@ a {
   height: 50px;
   width: 50px;
   margin-left: 1rem;
+  cursor: pointer;
 }
 
 .nav-logo {
-  font-family: 'Poppins';
+  font-family: '8-bit';
+  background: -webkit-linear-gradient(0deg, #9387ff 0%, #8469ff 25%, #6cb1ff 50%, #bd5aff 75%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .nav-button {
@@ -139,11 +199,11 @@ a {
   border-radius: 25px;
   border: solid 0px #000;
   text-align: center;
-  font-family: 'Poppins';
-  font-weight: 600;
+  font-family: 'Silkscreen';
+  /* font-weight: 600; */
   color: #fff;
   font-size: large;
-  width: 12rem;
+  width: auto;
   height: auto;
   padding: 1rem;
   margin-right: 1rem;
@@ -195,16 +255,21 @@ a {
 }
 
 .lp-h3-2 {
-  font-family: 'Poppins';
-  font-weight: 200;
+  font-family: 'Silkscreen';
+  font-weight: 300;
   margin: 1rem;
+  font-size: 2em;
 }
 
 .lp-h1-2 {
-  font-family: 'Poppins';
+  font-family: '8-bit';
   font-weight: 700;
   font-size: 5em;
   margin: 1rem;
+  background: -webkit-linear-gradient(45deg, #40c071 0%, #48a2f7 50%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  filter: drop-shadow(0px 0px 100px #596aff83);
 }
 
 .lp-button-div-2 {
@@ -214,7 +279,7 @@ a {
 
 .lp-button-2 {
   text-align: center;
-  font-family: 'Poppins';
+  font-family: 'silkscreen';
   font-weight: bold;
   font-size: large;
   background: #ffffff;
@@ -259,7 +324,7 @@ a {
 
 .lp-button2-2 {
   text-align: center;
-  font-family: 'Poppins';
+  font-family: 'Silkscreen';
   font-weight: 500;
   font-size: large;
   /* background: #36f8ff;
@@ -362,12 +427,12 @@ a {
     font-family: 'Poppins';
     font-weight: 200;
     margin: 0.25rem;
-  }
+    font-size: 1.25em;  }
 
   .lp-h1-2 {
     font-family: 'Poppins';
     font-weight: 700;
-    font-size: 2em;
+    font-size: 2.5em;
     margin: 1rem;
     margin-bottom: 2rem;
   }
