--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+
 
 @font-face {
   font-family: '8-bit';
@@ -188,7 +190,7 @@ a {
 }
 
 .nav-logo {
-  font-family: '8-bit';
+  font-family: 'Press Start 2P';
   background: -webkit-linear-gradient(0deg, #9387ff 0%, #8469ff 25%, #6cb1ff 50%, #bd5aff 75%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -263,7 +265,7 @@ a {
 }
 
 .lp-h1-2 {
-  font-family: '8-bit';
+  font-family: 'Press Start 2P';
   font-weight: 700;
   font-size: 5em;
   margin: 1rem;
