--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -395,6 +395,10 @@ a {
 
 @media (max-width: 912px) {
 
+  .nav-logo {
+    display: none;
+  }
+
   .hero-lp2 {
     display: flex;
     flex-direction: column;
